get new embeddings for 400er

--- a/data/manipulate_data.ipynb
+++ b/data/manipulate_data.ipynb
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "8e4c545b",
    "metadata": {},
    "outputs": [
@@ -584,18 +584,179 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "400128\n",
-      "   doc_id\n",
-      "0  400128\n",
-      "1  400128\n",
-      "2  400132\n",
       "Document with ID '128' has been manipulated and saved before. Skipping this one.\n",
-      "400132\n",
-      "   doc_id\n",
-      "0  400128\n",
-      "1  400128\n",
-      "2  400132\n",
-      "Document with ID '132' has been manipulated and saved before. Skipping this one.\n"
+      "Document with ID '132' has been manipulated and saved before. Skipping this one.\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n"
      ]
     }
    ],
@@ -613,7 +774,7 @@
     "queries = io_helpers.get_queries()\n",
     "\n",
     "\n",
-    "doc_ids = io_helpers.get_documents_to_manipulate(\"multi_textual_manipulation\")[:2]\n",
+    "doc_ids = io_helpers.get_documents_to_manipulate(\"multi_textual_manipulation\")\n",
     "\n",
     "for doc_id in doc_ids:\n",
     "    if io_helpers.file_has_been_manipulated(\n",
