--- a/2-comparison_by_llm.ipynb
+++ b/2-comparison_by_llm.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "1ec48a0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/leon/miniconda3/envs/ma/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import importlib\n",
     "import csv\n",
@@ -113,11 +122,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "c58ea81f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hospitalization Record\n",
+      "\n",
+      "Basic Information:\n",
+      "Name: L. Rogers\n",
+      "Gender: Female\n",
+      "Age: 56\n",
+      "Ethnicity: Caucasian\n",
+      "Marital Status: Married\n",
+      "Occupation: Teacher\n",
+      "Address: 89, Greenfield street, Knoxville\n",
+      "Admission Time: 6th, January\n",
+      "Record Time: 6th, January\n",
+      "Historian: Dr. James Nelson\n",
+      "Hospital Name: Knoxville General Hospital\n",
+      "\n",
+      "Chief Complaint:\n",
+      "Blurry, foggy vision and decreased visual acuity for the past 3 months\n",
+      "\n",
+      "Present Illness:\n",
+      "Onset: 3 months ago, at home, gradual onset, no specific prodromal symptoms identified. Possible aging-related onset.\n",
+      "Main Symptoms: Blurry, foggy vision affecting both eyes, progressively worsening over time. Decreased visual acuity, significant especially in low-light conditions. No known relieving factors; glare worsens the symptoms.\n",
+      "Accompanying Symptoms: Increased glare and halos around lights, occasional monocular double or multiple vision, difficulty seeing in bright light.\n",
+      "Diagnosis and Treatment History: Visited optometrist 2 months ago, diagnosed with early-stage cataract. Prescribed new glasses with minimal relief; no other treatments received prior to hospital admission.\n",
+      "General Condition Changes: Mental state remains stable, with some frustration due to vision impairment. No significant changes in sleep or appetite, regular urination and defecation, stable weight.\n",
+      "\n",
+      "Past History:\n",
+      "General Health Condition: Generally healthy, no chronic illnesses\n",
+      "Disease History: No history of systemic diseases or major illnesses\n",
+      "Infectious Disease History: No history of significant infectious diseases\n",
+      "Immunization History: Up-to-date with all standard vaccinations\n",
+      "Surgery and Trauma History: No previous surgeries or significant traumas reported\n",
+      "Blood Transfusion History: No history of blood transfusions\n",
+      "Allergy History: No known allergies\n",
+      "\n",
+      "Personal History:\n",
+      "Birthplace: Knoxville\n",
+      "Residence: Knoxville\n",
+      "Living Habits: Non-smoker, occasional social drinker, balanced diet\n",
+      "Occupation and Working Conditions: Teacher at a local high school, generally well-lit and comfortable working conditions\n",
+      "Exposure History: No significant exposure to industrial toxins, dust, or radioactive substances\n",
+      "Travel History: No recent travel history reported\n",
+      "\n",
+      "Marital and Family History:\n",
+      "Marital History:\n",
+      "Marital Status: Married\n",
+      "Marriage Age: 28\n",
+      "Spouse's Health Condition: Healthy\n",
+      "Children's Condition: Two children, both in good health\n",
+      "Menstrual History:\n",
+      "Menarche Age: 13\n",
+      "Menstruation Duration: 5 days\n",
+      "Menstruation Interval: 28 days\n",
+      "Last Menstruation: Menopausal at age 50\n",
+      "Menstrual Volume: Normal\n",
+      "Dysmenorrhea: None\n",
+      "Family History: Parents deceased, father had hypertension, mother had diabetes; siblings in good health with no similar vision issues reported.\n",
+      "\n",
+      "Physical Examination:\n",
+      "General Condition:\n",
+      "Temperature: 36.6°C\n",
+      "Pulse: 72 bpm\n",
+      "Respiration: 16 breaths/min\n",
+      "Blood Pressure: 120/80 mmHg\n",
+      "\n",
+      "Systematic Examination:\n",
+      "Skin: Normal, no lesions or abnormalities\n",
+      "Mucous Membranes: Normal\n",
+      "Lymph Nodes: No significant enlargement\n",
+      "Head and Organs: Normal, no abnormalities noted\n",
+      "Neck: Normal range of motion, no masses or tenderness\n",
+      "Chest: Normal thorax shape, clear lung sounds, normal heart sounds, no murmurs\n",
+      "Abdomen: Normal, no hepatosplenomegaly\n",
+      "Rectum and Anus: Not examined\n",
+      "External Genitalia: Normal for age\n",
+      "Spine: Normal curvature and mobility\n",
+      "Limbs: Normal, no deformities or abnormalities\n",
+      "Nervous System: Normal, no deficits or abnormalities\n",
+      "\n",
+      "Specialist Examination:\n",
+      "Ophthalmic examination reveals opacification of the lens in both eyes, more severe in the right eye. Visual acuity: Right eye 20/80, Left eye 20/60. Decreased contrast sensitivity and presence of glare.\n",
+      "\n",
+      "Auxiliary Examination:\n",
+      "Slit-lamp examination confirms cataract diagnosis with visible lens opacities. No evidence of retinal detachment or other ocular pathology.\n",
+      "\n",
+      "Preliminary Diagnosis:\n",
+      "Bilateral Cataract, more pronounced in the right eye\n",
+      "\n",
+      "Diagnostic Basis:\n",
+      "Gradual onset of blurry vision, decreased visual acuity, and ophthalmic examination confirming lens opacities consistent with cataracts.\n",
+      "\n",
+      "Differential Diagnosis:\n",
+      "Glaucoma ruled out due to normal intraocular pressure and absence of optic nerve damage. Age-related macular degeneration ruled out due to normal retinal appearance. Physiological lens aging considered but ruled out due to severity of visual impairment.\n",
+      "\n",
+      "Admission Records:\n",
+      "Physician's Signature: Dr. James Nelson\n",
+      "\n",
+      "Post-Admission Course Records:\n",
+      "First Course Record: Patient was admitted with a primary diagnosis of bilateral cataract. Initial examination confirms the presence of significant lens opacities. Plan includes regular ophthalmologic assessments, potential consideration for cataract surgery if visual impairment significantly impacts daily activities.\n",
+      "Daily Course Records: \n",
+      "Day 1: Vision remains stable, patient experiencing slight improvement with adjusted lighting conditions. \n",
+      "Day 2: No significant changes, continues to manage glare with polarized glasses.\n",
+      "Senior Physician Rounds Records: Dr. Smith reviewed patient on Day 3, agrees with conservative management and consideration for future surgery.\n",
+      "Difficult Case Discussion Records: N/A\n",
+      "Handover Records: On Day 4, patient condition remains stable, handed over to Dr. Lee for weekend coverage.\n",
+      "Transfer Records: N/A\n",
+      "Stage Summary: End of first week: Patient remains stable, vision unchanged. Continues conservative management, no immediate need for surgical intervention.\n",
+      "Emergency Records: N/A\n",
+      "Invasive Procedure Records: N/A\n",
+      "Consultation Records: Ophthalmology consultation on Day 3, supportive of conservative management.\n",
+      "Discharge Records: Planned for discharge on Day 7 with follow-up at the ophthalmology clinic in 2 weeks.\n",
+      "Critically Ill Patient Care Records: N/A\n",
+      "\n",
+      "Medical Orders:\n",
+      "Long-term Orders: \n",
+      "1. Regular ophthalmologic assessments.\n",
+      "2. Polarized glasses for glare management.\n",
+      "Temporary Orders: N/A\n",
+      "\n",
+      "Auxiliary Examination Reports:\n",
+      "Slit-lamp and visual acuity tests confirming cataract presence and severity.\n",
+      "\n",
+      "Temperature Chart:\n",
+      "Temperature, pulse, respiration, and blood pressure within normal limits throughout hospitalization.\n",
+      "\n",
+      "Blood Transfusion Consent: N/A\n",
+      "Special Examination Consent: N/A\n",
+      "Critical Condition Notice: N/A\n",
+      "In a detailed report from Knoxville General Hospital, patient L. Rogers, a 56-year-old teacher, was admitted on January 6th with significant visual complaints. Rogers, who resides in Knoxville and works at a local high school, has been experiencing progressive vision issues over the past three months. Initially presenting with blurry, foggy vision and decreased visual acuity, Rogers' symptoms include increased glare and halos around lights, which have severely impacted her daily life. \n",
+      "\n",
+      "Under the care of Dr. James Nelson, an ophthalmic examination confirmed the presence of bilateral cataracts, notably more severe in the right eye. Despite no prior history of systemic diseases, the diagnosis has necessitated a careful management plan at Knoxville General. The hospitalization records reveal that Rogers visited an optometrist two months prior and received a diagnosis of early-stage cataracts, with new glasses providing minimal relief.\n",
+      "\n",
+      "During her hospital stay, Rogers has been managing her symptoms with polarized glasses to reduce glare, while conservative management is currently favored over immediate surgical intervention. Dr. Smith, who reviewed her condition on Day 3 of her admission, supports this approach, noting that her vision remains stable.\n",
+      "\n",
+      "Planning for a discharge on Day 7, L. Rogers is set to have a follow-up appointment at the ophthalmology clinic in two weeks. Her hospitalization marks a critical step in addressing her eye health, with regular assessments and potential future surgery on the horizon to improve her quality of life.\n",
+      "contradictory_info_found=False contradictions=[]\n"
+     ]
+    }
+   ],
    "source": [
+    "importlib.reload(llm)\n",
+    "\n",
     "documents = io_helpers.get_documents(read_relations=True)\n",
     "prompts = io_helpers.get_prompt(name=\"comparison/extract_contradictions\")\n",
     "\n",
@@ -126,22 +279,27 @@
     "doc_id1 = 192\n",
     "doc_id2 = 400192\n",
     "\n",
-    "model = \"gpt-4o\"\n",
+    "model = \"gpt-4o-mini\"\n",
     "\n",
     "text1 = documents[documents[\"doc_id\"].astype(int) == int(doc_id1)].squeeze()[\"content\"]\n",
     "text2 = documents[documents[\"doc_id\"].astype(int) == int(doc_id2)].squeeze()[\"content\"]\n",
+    "\n",
+    "print(text1)\n",
+    "print(text2)\n",
     "\n",
     "system_prompt = prompts[\"system_prompt\"]\n",
     "user_prompt = llm.format_user_prompt(prompts[\"user_prompt\"], text1=text1, text2=text2)\n",
     "\n",
     "response = llm.call_any_llm(\n",
     "    system_prompt, user_prompt, model, response_format_pydantic=llm.LLMDocumentComparisonExtractResponse\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "f7d7027e",
    "metadata": {},
    "outputs": [
@@ -149,13 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Contradiction(quote_from_document1='Ophthalmic examination reveals opacification of the lens in both eyes, more severe in the right eye.', quote_from_document2='Dr. Carter confirmed that Rogers was indeed dealing with a bilateral cataract condition, notably more severe in her left eye.'), Contradiction(quote_from_document1=\"Admission Records: Physician's Signature: Dr. James Nelson\", quote_from_document2='Upon admission to Knoxville General Hospital on January 6th, Dr. Amanda Carter, a seasoned ophthalmologist, took charge of her case.')]\n",
-      "text1: Ophthalmic examination reveals opacification of the lens in both eyes, more severe in the right eye.\n",
-      "text2: Dr. Carter confirmed that Rogers was indeed dealing with a bilateral cataract condition, notably more severe in her left eye.\n",
-      "-------\n",
-      "text1: Admission Records: Physician's Signature: Dr. James Nelson\n",
-      "text2: Upon admission to Knoxville General Hospital on January 6th, Dr. Amanda Carter, a seasoned ophthalmologist, took charge of her case.\n",
-      "-------\n"
+      "[]\n"
      ]
     }
    ],
