new 400er manipulations (half)

--- a/data/manipulate_data.ipynb
+++ b/data/manipulate_data.ipynb
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "id": "4facae10",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "8e4c545b",
    "metadata": {},
    "outputs": [],
@@ -640,17 +640,22 @@
     "\n",
     "    io_helpers.easy_save_manipulated_doc(FILENAME, manipulated_doc)\n",
     "    for _, manipulated_query in manipulated_queries.iterrows():\n",
-    "        io_helpers.easy_save_manipulated_query(FILENAME, manipulated_query)\n",
-    "\n",
-    "    for pair in llm_response.qa_pairs_new:\n",
-    "        print(pair.question)\n",
-    "        print(pair.answer)\n",
-    "        print()"
+    "        io_helpers.easy_save_manipulated_query(FILENAME, manipulated_query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
+   "id": "c739498b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_iter = iter(io_helpers.get_documents_to_manipulate(\"multi_textual_manipulation\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
    "id": "74e64e11",
    "metadata": {},
    "outputs": [
@@ -658,78 +663,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text_new=\"**News Report: Knoxville General Hospital Tackles Vision Impairment**\\n\\nKnoxville General Hospital recently admitted a local female patient, L. Rogers, who has been experiencing progressive vision issues. Aged 60, Rogers is a retired nurse living in Knoxville. Her initial diagnosis was determined by Dr. James Nelson as an eye infection, more severe in the right eye. She was admitted on January 6th, with her chief complaint being persistent, worsened vision for the last quarter year. \\n\\nUpon further examination, Dr. Nelson confirmed persistent lens haze in both eyes. Despite this, the medical team plans to manage her symptoms conservatively without any urgent invasive procedures. The patient's primary symptoms include visual distortion, particularly in dimly lit settings, creating challenges in daily tasks. During her admission at the hospital, L. Rogers' vision conditions are being moderately managed through the use of specialized eyewear.\\n\\nL. Rogers' condition was first noted three months prior while she was at home. An early consultation with an optometrist indicated a potential lens issue, leading to the current hospital evaluation. Her overall health is stable, with no significant alterations to her mental state, appetite, or physical condition noted during her stay. The hospital is maintaining a close watch on her progress, with a follow-up planned at the ophthalmology clinic in two weeks.\\n\\nKnoxville General Hospital remains committed to providing personalized care, ensuring that all patients receive thorough attention targeted at improving their quality of life.\\n\\nThis case highlights the importance of timely diagnosis and the tailored treatment plans available at Knoxville General, promoting better health outcomes for their patients.\" qa_pairs_new=[QAPairV02(question=\"According to the hospitalization records of Knoxville General Hospital, what is L. Rogers' initial diagnosis?\", answer='An eye infection, more severe in the right eye.', quote='Her initial diagnosis was determined by Dr. James Nelson as an eye infection, more severe in the right eye.'), QAPairV02(question=\"According to the hospitalization records of Knoxville General Hospital, what is L. Rogers' chief complaint?\", answer='Persistent, worsened vision for the last quarter year.', quote='She was admitted on January 6th, with her chief complaint being persistent, worsened vision for the last quarter year.'), QAPairV02(question=\"According to the hospitalization records of Knoxville General Hospital, what is L. Rogers' age?\", answer='60.', quote='Aged 60, Rogers is a retired nurse living in Knoxville.'), QAPairV02(question=\"According to the hospitalization records of Knoxville General Hospital, what is L. Rogers' occupation?\", answer='Retired nurse.', quote='Aged 60, Rogers is a retired nurse living in Knoxville.')]\n"
+      "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
+      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n"
      ]
     }
    ],
    "source": [
-    "# doc_ids = io_helpers.get_documents_to_manipulate(\"multi_textual_manipulation\")\n",
-    "doc_id = 134\n",
-    "\n",
-    "manipulate_and_save(doc_id, on_exist=\"override\")\n",
-    "\n",
-    "print(user_prompt)\n",
-    "print(llm_response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "c00b0d30",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "According to the hospitalization records of Knoxville General Hospital, what is L. Rogers' initial diagnosis?\n",
-      "An eye infection, more severe in the right eye.\n",
-      "\n",
-      "According to the hospitalization records of Knoxville General Hospital, what is L. Rogers' chief complaint?\n",
-      "Persistent, worsened vision for the last quarter year.\n",
-      "\n",
-      "According to the hospitalization records of Knoxville General Hospital, what is L. Rogers' age?\n",
-      "60.\n",
-      "\n",
-      "According to the hospitalization records of Knoxville General Hospital, what is L. Rogers' occupation?\n",
-      "Retired nurse.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "for pair in llm_response.qa_pairs_new:\n",
-    "    print(pair.question)\n",
-    "    print(pair.answer)\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9772b9c8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**News Report: Knoxville General Hospital Tackles Vision Impairment**\n",
-      "\n",
-      "Knoxville General Hospital recently admitted a local female patient, L. Rogers, who has been experiencing progressive vision issues. Aged 60, Rogers is a retired nurse living in Knoxville. Her initial diagnosis was determined by Dr. James Nelson as an eye infection, more severe in the right eye. She was admitted on January 6th, with her chief complaint being persistent, worsened vision for the last quarter year. \n",
-      "\n",
-      "Upon further examination, Dr. Nelson confirmed persistent lens haze in both eyes. Despite this, the medical team plans to manage her symptoms conservatively without any urgent invasive procedures. The patient's primary symptoms include visual distortion, particularly in dimly lit settings, creating challenges in daily tasks. During her admission at the hospital, L. Rogers' vision conditions are being moderately managed through the use of specialized eyewear.\n",
-      "\n",
-      "L. Rogers' condition was first noted three months prior while she was at home. An early consultation with an optometrist indicated a potential lens issue, leading to the current hospital evaluation. Her overall health is stable, with no significant alterations to her mental state, appetite, or physical condition noted during her stay. The hospital is maintaining a close watch on her progress, with a follow-up planned at the ophthalmology clinic in two weeks.\n",
-      "\n",
-      "Knoxville General Hospital remains committed to providing personalized care, ensuring that all patients receive thorough attention targeted at improving their quality of life.\n",
-      "\n",
-      "This case highlights the importance of timely diagnosis and the tailored treatment plans available at Knoxville General, promoting better health outcomes for their patients.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(llm_response.text_new)"
+    "doc_id = next(id_iter)\n",
+    "manipulate_and_save(doc_id, on_exist=\"skip\")"
    ]
   }
  ],
