--- a/prompts/txt_to_json.ipynb
+++ b/prompts/txt_to_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "31c6450b",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
     "os.makedirs(os.path.dirname(file_path_json), exist_ok=True)\n",
     "with open(file_path_json, \"w\") as f:\n",
     "    content = {\"prompt_name\": filename, \"system_prompt\": system_prompt, \"user_prompt\": user_prompt}\n",
-    "    json.dump(content, f)"
+    "    json.dump(content, f, ensure_ascii=False)"
    ]
   }
  ],
