create new embeddings

--- a/data/manipulate_data.ipynb
+++ b/data/manipulate_data.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 191,
    "id": "c739498b",
    "metadata": {},
    "outputs": [],
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "id": "74e64e11",
    "metadata": {},
    "outputs": [
@@ -663,6 +663,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Document with ID '128' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '132' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '133' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '134' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '136' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '205' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '139' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '40' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '42' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '52' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '53' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '183' has been manipulated and saved before. Skipping this one.\n",
       "Saved document to 'additional_data/docs/multi_textual_manipulations.csv'\n",
       "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
       "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
@@ -671,16 +683,29 @@
       "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
       "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
       "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
-      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
-      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
-      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n",
-      "Saved Query to 'additional_data/queries/multi_textual_manipulations.csv'\n"
+      "Document with ID '188' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '192' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '65' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '194' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '198' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '199' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '74' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '202' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '204' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '75' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '78' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '79' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '207' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '213' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '214' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '110' has been manipulated and saved before. Skipping this one.\n",
+      "Document with ID '116' has been manipulated and saved before. Skipping this one.\n"
      ]
     }
    ],
    "source": [
-    "doc_id = next(id_iter)\n",
-    "manipulate_and_save(doc_id, on_exist=\"skip\")"
+    "# for doc_id in id_iter:\n",
+    "#     manipulate_and_save(doc_id, on_exist=\"skip\")"
    ]
   }
  ],
