--- a/1-embeddings.ipynb
+++ b/1-embeddings.ipynb
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fab41fdb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# _ = documents.apply(get_and_save_embeddings, axis=1)\n",
+    "_ = documents.apply(get_and_save_embeddings, axis=1)\n",
     "\n",
-    "# print(\"Done\")"
+    "print(\"Done\")"
    ]
   },
   {
